Revert header background

--- a/css/main.css
+++ b/css/main.css
@@ -1107,8 +1107,7 @@ footer{
 
 /*Change header background*/
 .scroll-header {
-	/*background: var(--green-2);*/
-	background: #fff;
+	background: var(--green-2);
 	box-shadow: var(--box-shadow);
 }
 
